--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -8,7 +8,7 @@
   <tr>
     <th>Name</th>
     <th>Description</th>
-    <th colspan="2">Actions</th>
+    <th colspan="3">Actions</th>
   </tr>
   <% @todos.each do |todo| %>
     <tr>
@@ -16,6 +16,7 @@
       <td><%= todo.description %></td>
       <td><%= link_to "Edit", edit_todo_path(todo) %></td>
       <td><%= link_to "Show", todo_path(todo) %></td>
+      <td><%= link_to "Delete", todo_path(todo), method: :delete, data: {confirm: "Are you sure?"} %></td>
     </tr>
   <% end %>
 </table>
